if (is_win) {
  vcpkg_dir = "C:\\vcpkg\vcpkg"
  vcpkg_lib_dir = "$vcpkg_dir\\installed\\x64-windows-static\\lib"
  vcpkg_include_dir = "$vcpkg_dir\\installed\\x64-windows-static\\include"
}

config("png_config") {
  include_dirs = [ "." ]
  if (is_win) {
    include_dirs += [ "$vcpkg_include_dir" ]
    ldflags = [ "/LIBPATH:$vcpkg_lib_dir" ]
    libs = [
      "zlib.lib",
    ]
  } else {
    libs = [
      "z",
    ]
  }
}

static_library("png") {
  sources = [
    "png.h",
    "pngconf.h",
    "pnglibconf.h", #generated
    
    "pngpriv.h",
    "pngdebug.h",
    "pnginfo.h",
    "pngstruct.h",
    #"pngprefix.h",
    
    "png.c",
    "pngerror.c",
    "pngget.c",
    "pngmem.c",
    "pngpread.c",
    "pngread.c",
    "pngrio.c",
    "pngrtran.c",
    "pngrutil.c",
    "pngset.c",
    "pngtrans.c",
    "pngwio.c",
    "pngwrite.c",
    "pngwtran.c",
    "pngwutil.c",
  ]
  
  public_configs = [ ":png_config" ]
}
