# ==================================================
# vars

config("uws_config") {
  include_dirs = [ "src" ]
  if (is_win) {
    libs = [
      "gdi32.lib",
    ]
  }
}

static_library("uws") {
  sources = [
    "src/Asio.h",
    "src/Extensions.h",
    "src/Hub.h",
    "src/Node.h",
    "src/WebSocket.h",
    "src/Backend.h",
    "src/Group.h",
    "src/Libuv.h",
    "src/Socket.h",
    "src/WebSocketProtocol.h",
    "src/Epoll.h",
    "src/HTTPSocket.h",
    "src/Networking.h",
    "src/uWS.h",
    "src/Extensions.cpp",
    "src/Group.cpp",
    "src/Networking.cpp",
    "src/Hub.cpp",
    "src/Node.cpp",
    "src/WebSocket.cpp",
    "src/HTTPSocket.cpp",
    "src/Socket.cpp",
    "src/Epoll.cpp",
  ]
  public_configs = [
    ":uws_config",
    "../openssl:openssl_config",
    "../zlib:zlib_config",
  ]
  deps = [ "../openssl:openssl" ]
  if (is_win || is_mac) {
    defines = [ "USE_LIBUV" ]
    deps += [ "../libuv:libuv" ]
  }
}

#executable("echo") {
#  sources = [ "echo.cpp" ]
#  deps = [
#    ":uws",
#  ]
#}

#executable("throughput") {
#  sources = [ "throughput.cpp" ]
#  deps = [
#    ":libuv",
#  ]
#}

