config("zlib_config") {
  include_dirs = [ "." ]
  defines = [
    "HAVE_STDARG_H=1",
  ]
  if (is_posix) {
    defines += [ "HAVE_UNISTD_H=1" ]
  }
}

static_library("zlib") {
  sources = [
    "adler32.c",
    "compress.c",
    "crc32.c",
    "deflate.c",
    "gzclose.c",
    "gzlib.c",
    "gzread.c",
    "gzwrite.c",
    "infback.c",
    "inffast.c",
    "inflate.c",
    "inftrees.c",
    "trees.c",
    "uncompr.c",
    "zutil.c",
  ]
  cflags = [
    "-Wall",
    "-Werror",
  ]

  public_configs = [ ":zlib_config" ]
}

#executable("zran") {
#  testonly = true
#  sources = [ "examples/zran.c" ]
#  deps = [
#    ":zlib",
#  ]
#}
