config("zlib_config") {
  include_dirs = [ "." ]
  defines = [
    "HAVE_STDARG_H=1",
  ]
  if (is_win) {
    defines += [ "NO_FSEEKO=1" ]
  } else {
    defines += [ "HAVE_UNISTD_H=1" ]
  }
}

static_library("zlib") {
  sources = [
    "adler32.c",
    "compress.c",
    "crc32.c",
    "deflate.c",
    "gzclose.c",
    "gzlib.c",
    "gzread.c",
    "gzwrite.c",
    "infback.c",
    "inffast.c",
    "inflate.c",
    "inftrees.c",
    "trees.c",
    "uncompr.c",
    "zutil.c",
  ]
  cflags = [
    "-Wall",
  ]

  public_configs = [ ":zlib_config" ]
}

#executable("example") {
#  testonly = true
#  sources = [ "test/example.c" ]
#  deps = [
#    ":zlib",
#  ]
#}
